test details: now hidden by default + visible by clicking on title, fixes #158

--- a/css/panel/components/TestInstructions.scss
+++ b/css/panel/components/TestInstructions.scss
@@ -1,22 +1,6 @@
 .TestInstructions {
 }
 
-.TestInstructions-toggle {
-	display: block;
-	width: 100%;
-	text-align: left;
-
-	&:before {
-		display: inline;
-		margin-right: 3px;
-		content: '►';
-
-		.TestInstructions.is-open & {
-			content: '▼';
-		}
-	}
-}
-
 .TestInstructions ul {
 	padding-left: vr(1);
 	list-style-type: disc;
